using System;

namespace ApplicationCore.Domain.Enums
{
    public enum Genero
    {
        Hombre,
        Mujer,
        Otro
    }

    public enum PrefConocer
    {
        Hombre,
        Mujer,
        Otro,
        Todos
    }

    public enum OrientacionSexual
    {
        Heterosexual,
        Gay,
        Lesbiana,
        Bisexual,
        Asexual,
        Otro
    }

    public enum Plan
    {
        Gratuito,
        Premium
    }
}
